--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="23671451" content="NguyenTranTrongHuy">
     <title>Phép Toán</title>
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <script src="../js/jquery-3.7.1.min.js"></script>
-    <script src="../js/bootstrap.js"></script>
-    <script src="../js/bai2b.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/bai2b.js"></script>
 </head>
 
 <body>
